# axum-template

./: .env  Cargo.toml
backend/: Cargo.toml
backend/src/: app_state.rs  auth.rs  error.rs  main.rs  routes.rs  system_user.rs
lib-backend/: Cargo.toml
lib-backend/src/: application.rs  cookies.rs  crypt.rs  env.rs  lib.rs  redis.rs  var_names.rs  vars.rs
lib-dto/: Cargo.toml
