[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
lib-backend = { path = "../lib-backend" }
lib-dto = { path = "../lib-dto" }
axum = { version = "0.7.4", features = ["multipart", "macros"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.1", features = ["fs", "cors"] }
async-trait = "0.1.77"
dotenvy = "0.15.7"
tracing = "0.1.40"
